--- a/CW2.csproj
+++ b/CW2.csproj
@@ -49,6 +49,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>CW2.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.TestTools.UITest.Extension, Version=16.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -70,6 +73,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Audit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Audit.Designer.cs">
+      <DependentUpon>Audit.cs</DependentUpon>
+    </Compile>
     <Compile Include="CountVotes.cs" />
     <Compile Include="DBAccess.cs" />
     <Compile Include="Form1.cs">
@@ -90,11 +99,29 @@
     <Compile Include="Form3.Designer.cs">
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
+    <Compile Include="InPersonStart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InPersonStart.Designer.cs">
+      <DependentUpon>InPersonStart.cs</DependentUpon>
+    </Compile>
+    <Compile Include="InPersonVote.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InPersonVote.Designer.cs">
+      <DependentUpon>InPersonVote.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Preferential.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Preferential.Designer.cs">
+      <DependentUpon>Preferential.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -106,6 +133,9 @@
     </Compile>
     <Compile Include="TestCount.cs" />
     <Compile Include="Vote.cs" />
+    <EmbeddedResource Include="Audit.resx">
+      <DependentUpon>Audit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,8 +145,17 @@
     <EmbeddedResource Include="Form3.resx">
       <DependentUpon>Form3.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="InPersonStart.resx">
+      <DependentUpon>InPersonStart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InPersonVote.resx">
+      <DependentUpon>InPersonVote.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Preferential.resx">
+      <DependentUpon>Preferential.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -126,6 +165,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Content Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
@@ -140,6 +180,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\274-2747053_simple-black-arrow-png-clipart.png" />
+    <None Include="Resources\black-arrow-transparent-11549781228ghlkbe79wx.png" />
+    <None Include="Resources\3-36488_black-arrow-png-transparent-background-black-arrow.png" />
+    <None Include="Resources\3-36488_black-arrow-png-transparent-background-black-arrow1.png" />
     <Content Include="SqlDatabase.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
